Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -793,42 +793,42 @@
         "imagen-4.0-780.png": true,
         "imagen-4.0-781.png": true,
         "imagen-4.0-782.png": true,
-        "imagen-4.0-783.png": false,
-        "imagen-4.0-784.png": false,
-        "imagen-4.0-785.png": false,
-        "imagen-4.0-786.png": false,
-        "imagen-4.0-787.png": false,
-        "imagen-4.0-788.png": false,
-        "imagen-4.0-789.png": false,
-        "imagen-4.0-790.png": false,
-        "imagen-4.0-791.png": false,
-        "imagen-4.0-792.png": false,
-        "imagen-4.0-793.png": false,
-        "imagen-4.0-794.png": false,
-        "imagen-4.0-795.png": false,
-        "imagen-4.0-796.png": false,
-        "imagen-4.0-797.png": false,
-        "imagen-4.0-798.png": false,
-        "imagen-4.0-799.png": false,
-        "imagen-4.0-800.png": false,
-        "imagen-4.0-801.png": false,
-        "imagen-4.0-802.png": false,
-        "imagen-4.0-803.png": false,
-        "imagen-4.0-804.png": false,
-        "imagen-4.0-805.png": false,
-        "imagen-4.0-806.png": false,
-        "imagen-4.0-807.png": false,
-        "imagen-4.0-808.png": false,
-        "imagen-4.0-809.png": false,
-        "imagen-4.0-810.png": false,
-        "imagen-4.0-811.png": false,
-        "imagen-4.0-812.png": false,
-        "imagen-4.0-813.png": false,
-        "imagen-4.0-814.png": false,
-        "imagen-4.0-815.png": false,
-        "imagen-4.0-816.png": false,
-        "imagen-4.0-817.png": false,
-        "imagen-4.0-818.png": false,
+        "imagen-4.0-783.png": true,
+        "imagen-4.0-784.png": true,
+        "imagen-4.0-785.png": true,
+        "imagen-4.0-786.png": true,
+        "imagen-4.0-787.png": true,
+        "imagen-4.0-788.png": true,
+        "imagen-4.0-789.png": true,
+        "imagen-4.0-790.png": true,
+        "imagen-4.0-791.png": true,
+        "imagen-4.0-792.png": true,
+        "imagen-4.0-793.png": true,
+        "imagen-4.0-794.png": true,
+        "imagen-4.0-795.png": true,
+        "imagen-4.0-796.png": true,
+        "imagen-4.0-797.png": true,
+        "imagen-4.0-798.png": true,
+        "imagen-4.0-799.png": true,
+        "imagen-4.0-800.png": true,
+        "imagen-4.0-801.png": true,
+        "imagen-4.0-802.png": true,
+        "imagen-4.0-803.png": true,
+        "imagen-4.0-804.png": true,
+        "imagen-4.0-805.png": true,
+        "imagen-4.0-806.png": true,
+        "imagen-4.0-807.png": true,
+        "imagen-4.0-808.png": true,
+        "imagen-4.0-809.png": true,
+        "imagen-4.0-810.png": true,
+        "imagen-4.0-811.png": true,
+        "imagen-4.0-812.png": true,
+        "imagen-4.0-813.png": true,
+        "imagen-4.0-814.png": true,
+        "imagen-4.0-815.png": true,
+        "imagen-4.0-816.png": true,
+        "imagen-4.0-817.png": true,
+        "imagen-4.0-818.png": true,
         "imagen-4.0-819.png": false,
         "imagen-4.0-820.png": false,
         "imagen-4.0-821.png": false,
