Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -829,10 +829,10 @@
         "imagen-4.0-816.png": true,
         "imagen-4.0-817.png": true,
         "imagen-4.0-818.png": true,
-        "imagen-4.0-819.png": false,
-        "imagen-4.0-820.png": false,
-        "imagen-4.0-821.png": false,
-        "imagen-4.0-822.png": false,
+        "imagen-4.0-819.png": true,
+        "imagen-4.0-820.png": true,
+        "imagen-4.0-821.png": true,
+        "imagen-4.0-822.png": true,
         "imagen-4.0-823.png": false,
         "imagen-4.0-824.png": false,
         "imagen-4.0-825.png": false,
