Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -833,34 +833,34 @@
         "imagen-4.0-820.png": true,
         "imagen-4.0-821.png": true,
         "imagen-4.0-822.png": true,
-        "imagen-4.0-823.png": false,
-        "imagen-4.0-824.png": false,
-        "imagen-4.0-825.png": false,
-        "imagen-4.0-826.png": false,
-        "imagen-4.0-827.png": false,
-        "imagen-4.0-828.png": false,
-        "imagen-4.0-829.png": false,
-        "imagen-4.0-830.png": false,
-        "imagen-4.0-831.png": false,
-        "imagen-4.0-832.png": false,
-        "imagen-4.0-833.png": false,
-        "imagen-4.0-834.png": false,
-        "imagen-4.0-835.png": false,
-        "imagen-4.0-836.png": false,
-        "imagen-4.0-837.png": false,
-        "imagen-4.0-838.png": false,
-        "imagen-4.0-839.png": false,
-        "imagen-4.0-840.png": false,
-        "imagen-4.0-841.png": false,
-        "imagen-4.0-842.png": false,
-        "imagen-4.0-843.png": false,
-        "imagen-4.0-844.png": false,
-        "imagen-4.0-845.png": false,
-        "imagen-4.0-846.png": false,
-        "imagen-4.0-847.png": false,
-        "imagen-4.0-848.png": false,
-        "imagen-4.0-849.png": false,
-        "imagen-4.0-850.png": false,
+        "imagen-4.0-823.png": true,
+        "imagen-4.0-824.png": true,
+        "imagen-4.0-825.png": true,
+        "imagen-4.0-826.png": true,
+        "imagen-4.0-827.png": true,
+        "imagen-4.0-828.png": true,
+        "imagen-4.0-829.png": true,
+        "imagen-4.0-830.png": true,
+        "imagen-4.0-831.png": true,
+        "imagen-4.0-832.png": true,
+        "imagen-4.0-833.png": true,
+        "imagen-4.0-834.png": true,
+        "imagen-4.0-835.png": true,
+        "imagen-4.0-836.png": true,
+        "imagen-4.0-837.png": true,
+        "imagen-4.0-838.png": true,
+        "imagen-4.0-839.png": true,
+        "imagen-4.0-840.png": true,
+        "imagen-4.0-841.png": true,
+        "imagen-4.0-842.png": true,
+        "imagen-4.0-843.png": true,
+        "imagen-4.0-844.png": true,
+        "imagen-4.0-845.png": true,
+        "imagen-4.0-846.png": true,
+        "imagen-4.0-847.png": true,
+        "imagen-4.0-848.png": true,
+        "imagen-4.0-849.png": true,
+        "imagen-4.0-850.png": true,
         "imagen-4.0-851.png": false,
         "imagen-4.0-852.png": false,
         "imagen-4.0-853.png": false,
