Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -861,48 +861,48 @@
         "imagen-4.0-848.png": true,
         "imagen-4.0-849.png": true,
         "imagen-4.0-850.png": true,
-        "imagen-4.0-851.png": false,
-        "imagen-4.0-852.png": false,
-        "imagen-4.0-853.png": false,
-        "imagen-4.0-854.png": false,
-        "imagen-4.0-855.png": false,
-        "imagen-4.0-856.png": false,
-        "imagen-4.0-857.png": false,
-        "imagen-4.0-858.png": false,
-        "imagen-4.0-859.png": false,
-        "imagen-4.0-860.png": false,
-        "imagen-4.0-861.png": false,
-        "imagen-4.0-862.png": false,
-        "imagen-4.0-863.png": false,
-        "imagen-4.0-864.png": false,
-        "imagen-4.0-865.png": false,
-        "imagen-4.0-866.png": false,
-        "imagen-4.0-867.png": false,
-        "imagen-4.0-868.png": false,
-        "imagen-4.0-869.png": false,
-        "imagen-4.0-870.png": false,
-        "imagen-4.0-871.png": false,
-        "imagen-4.0-872.png": false,
-        "imagen-4.0-873.png": false,
-        "imagen-4.0-874.png": false,
-        "imagen-4.0-875.png": false,
-        "imagen-4.0-876.png": false,
-        "imagen-4.0-877.png": false,
-        "imagen-4.0-878.png": false,
-        "imagen-4.0-879.png": false,
-        "imagen-4.0-880.png": false,
-        "imagen-4.0-881.png": false,
-        "imagen-4.0-882.png": false,
-        "imagen-4.0-883.png": false,
-        "imagen-4.0-884.png": false,
-        "imagen-4.0-885.png": false,
-        "imagen-4.0-886.png": false,
-        "imagen-4.0-887.png": false,
-        "imagen-4.0-888.png": false,
-        "imagen-4.0-889.png": false,
-        "imagen-4.0-890.png": false,
-        "imagen-4.0-891.png": false,
-        "imagen-4.0-892.png": false,
+        "imagen-4.0-851.png": true,
+        "imagen-4.0-852.png": true,
+        "imagen-4.0-853.png": true,
+        "imagen-4.0-854.png": true,
+        "imagen-4.0-855.png": true,
+        "imagen-4.0-856.png": true,
+        "imagen-4.0-857.png": true,
+        "imagen-4.0-858.png": true,
+        "imagen-4.0-859.png": true,
+        "imagen-4.0-860.png": true,
+        "imagen-4.0-861.png": true,
+        "imagen-4.0-862.png": true,
+        "imagen-4.0-863.png": true,
+        "imagen-4.0-864.png": true,
+        "imagen-4.0-865.png": true,
+        "imagen-4.0-866.png": true,
+        "imagen-4.0-867.png": true,
+        "imagen-4.0-868.png": true,
+        "imagen-4.0-869.png": true,
+        "imagen-4.0-870.png": true,
+        "imagen-4.0-871.png": true,
+        "imagen-4.0-872.png": true,
+        "imagen-4.0-873.png": true,
+        "imagen-4.0-874.png": true,
+        "imagen-4.0-875.png": true,
+        "imagen-4.0-876.png": true,
+        "imagen-4.0-877.png": true,
+        "imagen-4.0-878.png": true,
+        "imagen-4.0-879.png": true,
+        "imagen-4.0-880.png": true,
+        "imagen-4.0-881.png": true,
+        "imagen-4.0-882.png": true,
+        "imagen-4.0-883.png": true,
+        "imagen-4.0-884.png": true,
+        "imagen-4.0-885.png": true,
+        "imagen-4.0-886.png": true,
+        "imagen-4.0-887.png": true,
+        "imagen-4.0-888.png": true,
+        "imagen-4.0-889.png": true,
+        "imagen-4.0-890.png": true,
+        "imagen-4.0-891.png": true,
+        "imagen-4.0-892.png": true,
         "imagen-4.0-893.png": false,
         "imagen-4.0-894.png": false,
         "imagen-4.0-895.png": false,
