Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -903,55 +903,55 @@
         "imagen-4.0-890.png": true,
         "imagen-4.0-891.png": true,
         "imagen-4.0-892.png": true,
-        "imagen-4.0-893.png": false,
-        "imagen-4.0-894.png": false,
-        "imagen-4.0-895.png": false,
-        "imagen-4.0-896.png": false,
-        "imagen-4.0-897.png": false,
-        "imagen-4.0-898.png": false,
-        "imagen-4.0-899.png": false,
-        "imagen-4.0-900.png": false,
-        "imagen-4.0-901.png": false,
-        "imagen-4.0-902.png": false,
-        "imagen-4.0-903.png": false,
-        "imagen-4.0-904.png": false,
-        "imagen-4.0-905.png": false,
-        "imagen-4.0-906.png": false,
-        "imagen-4.0-907.png": false,
-        "imagen-4.0-908.png": false,
-        "imagen-4.0-909.png": false,
-        "imagen-4.0-910.png": false,
-        "imagen-4.0-911.png": false,
-        "imagen-4.0-912.png": false,
-        "imagen-4.0-913.png": false,
-        "imagen-4.0-914.png": false,
-        "imagen-4.0-915.png": false,
-        "imagen-4.0-916.png": false,
-        "imagen-4.0-917.png": false,
-        "imagen-4.0-918.png": false,
-        "imagen-4.0-919.png": false,
-        "imagen-4.0-920.png": false,
-        "imagen-4.0-921.png": false,
-        "imagen-4.0-922.png": false,
-        "imagen-4.0-923.png": false,
-        "imagen-4.0-924.png": false,
-        "imagen-4.0-925.png": false,
-        "imagen-4.0-926.png": false,
-        "imagen-4.0-927.png": false,
-        "imagen-4.0-928.png": false,
-        "imagen-4.0-929.png": false,
-        "imagen-4.0-930.png": false,
-        "imagen-4.0-931.png": false,
-        "imagen-4.0-932.png": false,
-        "imagen-4.0-933.png": false,
-        "imagen-4.0-934.png": false,
-        "imagen-4.0-935.png": false,
-        "imagen-4.0-936.png": false,
-        "imagen-4.0-937.png": false,
-        "imagen-4.0-938.png": false,
-        "imagen-4.0-939.png": false,
-        "imagen-4.0-940.png": false,
-        "imagen-4.0-941.png": false,
+        "imagen-4.0-893.png": true,
+        "imagen-4.0-894.png": true,
+        "imagen-4.0-895.png": true,
+        "imagen-4.0-896.png": true,
+        "imagen-4.0-897.png": true,
+        "imagen-4.0-898.png": true,
+        "imagen-4.0-899.png": true,
+        "imagen-4.0-900.png": true,
+        "imagen-4.0-901.png": true,
+        "imagen-4.0-902.png": true,
+        "imagen-4.0-903.png": true,
+        "imagen-4.0-904.png": true,
+        "imagen-4.0-905.png": true,
+        "imagen-4.0-906.png": true,
+        "imagen-4.0-907.png": true,
+        "imagen-4.0-908.png": true,
+        "imagen-4.0-909.png": true,
+        "imagen-4.0-910.png": true,
+        "imagen-4.0-911.png": true,
+        "imagen-4.0-912.png": true,
+        "imagen-4.0-913.png": true,
+        "imagen-4.0-914.png": true,
+        "imagen-4.0-915.png": true,
+        "imagen-4.0-916.png": true,
+        "imagen-4.0-917.png": true,
+        "imagen-4.0-918.png": true,
+        "imagen-4.0-919.png": true,
+        "imagen-4.0-920.png": true,
+        "imagen-4.0-921.png": true,
+        "imagen-4.0-922.png": true,
+        "imagen-4.0-923.png": true,
+        "imagen-4.0-924.png": true,
+        "imagen-4.0-925.png": true,
+        "imagen-4.0-926.png": true,
+        "imagen-4.0-927.png": true,
+        "imagen-4.0-928.png": true,
+        "imagen-4.0-929.png": true,
+        "imagen-4.0-930.png": true,
+        "imagen-4.0-931.png": true,
+        "imagen-4.0-932.png": true,
+        "imagen-4.0-933.png": true,
+        "imagen-4.0-934.png": true,
+        "imagen-4.0-935.png": true,
+        "imagen-4.0-936.png": true,
+        "imagen-4.0-937.png": true,
+        "imagen-4.0-938.png": true,
+        "imagen-4.0-939.png": true,
+        "imagen-4.0-940.png": true,
+        "imagen-4.0-941.png": true,
         "imagen-4.0-942.png": false,
         "imagen-4.0-943.png": false,
         "imagen-4.0-944.png": false,
