Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -952,45 +952,45 @@
         "imagen-4.0-939.png": true,
         "imagen-4.0-940.png": true,
         "imagen-4.0-941.png": true,
-        "imagen-4.0-942.png": false,
-        "imagen-4.0-943.png": false,
-        "imagen-4.0-944.png": false,
-        "imagen-4.0-945.png": false,
-        "imagen-4.0-946.png": false,
-        "imagen-4.0-947.png": false,
-        "imagen-4.0-948.png": false,
-        "imagen-4.0-949.png": false,
-        "imagen-4.0-950.png": false,
-        "imagen-4.0-951.png": false,
-        "imagen-4.0-952.png": false,
-        "imagen-4.0-953.png": false,
-        "imagen-4.0-954.png": false,
-        "imagen-4.0-955.png": false,
-        "imagen-4.0-956.png": false,
-        "imagen-4.0-957.png": false,
-        "imagen-4.0-958.png": false,
-        "imagen-4.0-959.png": false,
-        "imagen-4.0-960.png": false,
-        "imagen-4.0-961.png": false,
-        "imagen-4.0-962.png": false,
-        "imagen-4.0-963.png": false,
-        "imagen-4.0-964.png": false,
-        "imagen-4.0-965.png": false,
-        "imagen-4.0-966.png": false,
-        "imagen-4.0-967.png": false,
-        "imagen-4.0-968.png": false,
-        "imagen-4.0-969.png": false,
-        "imagen-4.0-970.png": false,
-        "imagen-4.0-971.png": false,
-        "imagen-4.0-972.png": false,
-        "imagen-4.0-973.png": false,
-        "imagen-4.0-974.png": false,
-        "imagen-4.0-975.png": false,
-        "imagen-4.0-976.png": false,
-        "imagen-4.0-977.png": false,
-        "imagen-4.0-978.png": false,
-        "imagen-4.0-979.png": false,
-        "imagen-4.0-980.png": false,
+        "imagen-4.0-942.png": true,
+        "imagen-4.0-943.png": true,
+        "imagen-4.0-944.png": true,
+        "imagen-4.0-945.png": true,
+        "imagen-4.0-946.png": true,
+        "imagen-4.0-947.png": true,
+        "imagen-4.0-948.png": true,
+        "imagen-4.0-949.png": true,
+        "imagen-4.0-950.png": true,
+        "imagen-4.0-951.png": true,
+        "imagen-4.0-952.png": true,
+        "imagen-4.0-953.png": true,
+        "imagen-4.0-954.png": true,
+        "imagen-4.0-955.png": true,
+        "imagen-4.0-956.png": true,
+        "imagen-4.0-957.png": true,
+        "imagen-4.0-958.png": true,
+        "imagen-4.0-959.png": true,
+        "imagen-4.0-960.png": true,
+        "imagen-4.0-961.png": true,
+        "imagen-4.0-962.png": true,
+        "imagen-4.0-963.png": true,
+        "imagen-4.0-964.png": true,
+        "imagen-4.0-965.png": true,
+        "imagen-4.0-966.png": true,
+        "imagen-4.0-967.png": true,
+        "imagen-4.0-968.png": true,
+        "imagen-4.0-969.png": true,
+        "imagen-4.0-970.png": true,
+        "imagen-4.0-971.png": true,
+        "imagen-4.0-972.png": true,
+        "imagen-4.0-973.png": true,
+        "imagen-4.0-974.png": true,
+        "imagen-4.0-975.png": true,
+        "imagen-4.0-976.png": true,
+        "imagen-4.0-977.png": true,
+        "imagen-4.0-978.png": true,
+        "imagen-4.0-979.png": true,
+        "imagen-4.0-980.png": true,
         "imagen-4.0-981.png": false,
         "imagen-4.0-982.png": false,
         "imagen-4.0-983.png": false,
