Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -991,37 +991,37 @@
         "imagen-4.0-978.png": true,
         "imagen-4.0-979.png": true,
         "imagen-4.0-980.png": true,
-        "imagen-4.0-981.png": false,
-        "imagen-4.0-982.png": false,
-        "imagen-4.0-983.png": false,
-        "imagen-4.0-984.png": false,
-        "imagen-4.0-985.png": false,
-        "imagen-4.0-986.png": false,
-        "imagen-4.0-987.png": false,
-        "imagen-4.0-988.png": false,
-        "imagen-4.0-989.png": false,
-        "imagen-4.0-990.png": false,
-        "imagen-4.0-991.png": false,
-        "imagen-4.0-992.png": false,
-        "imagen-4.0-993.png": false,
-        "imagen-4.0-994.png": false,
-        "imagen-4.0-995.png": false,
-        "imagen-4.0-996.png": false,
-        "imagen-4.0-997.png": false,
-        "imagen-4.0-998.png": false,
-        "imagen-4.0-999.png": false,
-        "imagen-4.0-1000.png": false,
-        "imagen-4.0-1001.png": false,
-        "imagen-4.0-1002.png": false,
-        "imagen-4.0-1003.png": false,
-        "imagen-4.0-1004.png": false,
-        "imagen-4.0-1005.png": false,
-        "imagen-4.0-1006.png": false,
-        "imagen-4.0-1007.png": false,
-        "imagen-4.0-1008.png": false,
-        "imagen-4.0-1009.png": false,
-        "imagen-4.0-1010.png": false,
-        "imagen-4.0-1011.png": false,
+        "imagen-4.0-981.png": true,
+        "imagen-4.0-982.png": true,
+        "imagen-4.0-983.png": true,
+        "imagen-4.0-984.png": true,
+        "imagen-4.0-985.png": true,
+        "imagen-4.0-986.png": true,
+        "imagen-4.0-987.png": true,
+        "imagen-4.0-988.png": true,
+        "imagen-4.0-989.png": true,
+        "imagen-4.0-990.png": true,
+        "imagen-4.0-991.png": true,
+        "imagen-4.0-992.png": true,
+        "imagen-4.0-993.png": true,
+        "imagen-4.0-994.png": true,
+        "imagen-4.0-995.png": true,
+        "imagen-4.0-996.png": true,
+        "imagen-4.0-997.png": true,
+        "imagen-4.0-998.png": true,
+        "imagen-4.0-999.png": true,
+        "imagen-4.0-1000.png": true,
+        "imagen-4.0-1001.png": true,
+        "imagen-4.0-1002.png": true,
+        "imagen-4.0-1003.png": true,
+        "imagen-4.0-1004.png": true,
+        "imagen-4.0-1005.png": true,
+        "imagen-4.0-1006.png": true,
+        "imagen-4.0-1007.png": true,
+        "imagen-4.0-1008.png": true,
+        "imagen-4.0-1009.png": true,
+        "imagen-4.0-1010.png": true,
+        "imagen-4.0-1011.png": true,
         "imagen-4.0-1012.png": false,
         "imagen-4.0-1013.png": false,
         "imagen-4.0-1014.png": false,
