Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1022,18 +1022,18 @@
         "imagen-4.0-1009.png": true,
         "imagen-4.0-1010.png": true,
         "imagen-4.0-1011.png": true,
-        "imagen-4.0-1012.png": false,
-        "imagen-4.0-1013.png": false,
-        "imagen-4.0-1014.png": false,
-        "imagen-4.0-1015.png": false,
-        "imagen-4.0-1016.png": false,
-        "imagen-4.0-1017.png": false,
-        "imagen-4.0-1018.png": false,
-        "imagen-4.0-1019.png": false,
-        "imagen-4.0-1020.png": false,
-        "imagen-4.0-1021.png": false,
-        "imagen-4.0-1022.png": false,
-        "imagen-4.0-1023.png": false,
+        "imagen-4.0-1012.png": true,
+        "imagen-4.0-1013.png": true,
+        "imagen-4.0-1014.png": true,
+        "imagen-4.0-1015.png": true,
+        "imagen-4.0-1016.png": true,
+        "imagen-4.0-1017.png": true,
+        "imagen-4.0-1018.png": true,
+        "imagen-4.0-1019.png": true,
+        "imagen-4.0-1020.png": true,
+        "imagen-4.0-1021.png": true,
+        "imagen-4.0-1022.png": true,
+        "imagen-4.0-1023.png": true,
         "imagen-4.0-1024.png": false,
         "imagen-4.0-1025.png": false,
         "imagen-4.0-1026.png": false,
