Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1034,23 +1034,23 @@
         "imagen-4.0-1021.png": true,
         "imagen-4.0-1022.png": true,
         "imagen-4.0-1023.png": true,
-        "imagen-4.0-1024.png": false,
-        "imagen-4.0-1025.png": false,
-        "imagen-4.0-1026.png": false,
-        "imagen-4.0-1027.png": false,
-        "imagen-4.0-1028.png": false,
-        "imagen-4.0-1029.png": false,
-        "imagen-4.0-1030.png": false,
-        "imagen-4.0-1031.png": false,
-        "imagen-4.0-1032.png": false,
-        "imagen-4.0-1033.png": false,
-        "imagen-4.0-1034.png": false,
-        "imagen-4.0-1035.png": false,
-        "imagen-4.0-1036.png": false,
-        "imagen-4.0-1037.png": false,
-        "imagen-4.0-1038.png": false,
-        "imagen-4.0-1039.png": false,
-        "imagen-4.0-1040.png": false,
+        "imagen-4.0-1024.png": true,
+        "imagen-4.0-1025.png": true,
+        "imagen-4.0-1026.png": true,
+        "imagen-4.0-1027.png": true,
+        "imagen-4.0-1028.png": true,
+        "imagen-4.0-1029.png": true,
+        "imagen-4.0-1030.png": true,
+        "imagen-4.0-1031.png": true,
+        "imagen-4.0-1032.png": true,
+        "imagen-4.0-1033.png": true,
+        "imagen-4.0-1034.png": true,
+        "imagen-4.0-1035.png": true,
+        "imagen-4.0-1036.png": true,
+        "imagen-4.0-1037.png": true,
+        "imagen-4.0-1038.png": true,
+        "imagen-4.0-1039.png": true,
+        "imagen-4.0-1040.png": true,
         "imagen-4.0-1041.png": false,
         "imagen-4.0-1042.png": false,
         "imagen-4.0-1043.png": false,
