Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1051,39 +1051,39 @@
         "imagen-4.0-1038.png": true,
         "imagen-4.0-1039.png": true,
         "imagen-4.0-1040.png": true,
-        "imagen-4.0-1041.png": false,
-        "imagen-4.0-1042.png": false,
-        "imagen-4.0-1043.png": false,
-        "imagen-4.0-1044.png": false,
-        "imagen-4.0-1045.png": false,
-        "imagen-4.0-1046.png": false,
-        "imagen-4.0-1047.png": false,
-        "imagen-4.0-1048.png": false,
-        "imagen-4.0-1049.png": false,
-        "imagen-4.0-1050.png": false,
-        "imagen-4.0-1051.png": false,
-        "imagen-4.0-1052.png": false,
-        "imagen-4.0-1053.png": false,
-        "imagen-4.0-1054.png": false,
-        "imagen-4.0-1055.png": false,
-        "imagen-4.0-1056.png": false,
-        "imagen-4.0-1057.png": false,
-        "imagen-4.0-1058.png": false,
-        "imagen-4.0-1059.png": false,
-        "imagen-4.0-1060.png": false,
-        "imagen-4.0-1061.png": false,
-        "imagen-4.0-1062.png": false,
-        "imagen-4.0-1063.png": false,
-        "imagen-4.0-1064.png": false,
-        "imagen-4.0-1065.png": false,
-        "imagen-4.0-1066.png": false,
-        "imagen-4.0-1067.png": false,
-        "imagen-4.0-1068.png": false,
-        "imagen-4.0-1069.png": false,
-        "imagen-4.0-1070.png": false,
-        "imagen-4.0-1071.png": false,
-        "imagen-4.0-1072.png": false,
-        "imagen-4.0-1073.png": false,
+        "imagen-4.0-1041.png": true,
+        "imagen-4.0-1042.png": true,
+        "imagen-4.0-1043.png": true,
+        "imagen-4.0-1044.png": true,
+        "imagen-4.0-1045.png": true,
+        "imagen-4.0-1046.png": true,
+        "imagen-4.0-1047.png": true,
+        "imagen-4.0-1048.png": true,
+        "imagen-4.0-1049.png": true,
+        "imagen-4.0-1050.png": true,
+        "imagen-4.0-1051.png": true,
+        "imagen-4.0-1052.png": true,
+        "imagen-4.0-1053.png": true,
+        "imagen-4.0-1054.png": true,
+        "imagen-4.0-1055.png": true,
+        "imagen-4.0-1056.png": true,
+        "imagen-4.0-1057.png": true,
+        "imagen-4.0-1058.png": true,
+        "imagen-4.0-1059.png": true,
+        "imagen-4.0-1060.png": true,
+        "imagen-4.0-1061.png": true,
+        "imagen-4.0-1062.png": true,
+        "imagen-4.0-1063.png": true,
+        "imagen-4.0-1064.png": true,
+        "imagen-4.0-1065.png": true,
+        "imagen-4.0-1066.png": true,
+        "imagen-4.0-1067.png": true,
+        "imagen-4.0-1068.png": true,
+        "imagen-4.0-1069.png": true,
+        "imagen-4.0-1070.png": true,
+        "imagen-4.0-1071.png": true,
+        "imagen-4.0-1072.png": true,
+        "imagen-4.0-1073.png": true,
         "imagen-4.0-1074.png": false,
         "imagen-4.0-1075.png": false,
         "imagen-4.0-1076.png": false,
