Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1084,15 +1084,15 @@
         "imagen-4.0-1071.png": true,
         "imagen-4.0-1072.png": true,
         "imagen-4.0-1073.png": true,
-        "imagen-4.0-1074.png": false,
-        "imagen-4.0-1075.png": false,
-        "imagen-4.0-1076.png": false,
-        "imagen-4.0-1077.png": false,
-        "imagen-4.0-1078.png": false,
-        "imagen-4.0-1079.png": false,
-        "imagen-4.0-1080.png": false,
-        "imagen-4.0-1081.png": false,
-        "imagen-4.0-1082.png": false,
+        "imagen-4.0-1074.png": true,
+        "imagen-4.0-1075.png": true,
+        "imagen-4.0-1076.png": true,
+        "imagen-4.0-1077.png": true,
+        "imagen-4.0-1078.png": true,
+        "imagen-4.0-1079.png": true,
+        "imagen-4.0-1080.png": true,
+        "imagen-4.0-1081.png": true,
+        "imagen-4.0-1082.png": true,
         "imagen-4.0-1083.png": false,
         "imagen-4.0-1084.png": false,
         "imagen-4.0-1085.png": false,
