Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1193,29 +1193,29 @@
         "imagen-4.0-1180.png": true,
         "imagen-4.0-1181.png": true,
         "imagen-4.0-1182.png": true,
-        "imagen-4.0-1183.png": false,
-        "imagen-4.0-1184.png": false,
-        "imagen-4.0-1185.png": false,
-        "imagen-4.0-1186.png": false,
-        "imagen-4.0-1187.png": false,
-        "imagen-4.0-1188.png": false,
-        "imagen-4.0-1189.png": false,
-        "imagen-4.0-1190.png": false,
-        "imagen-4.0-1191.png": false,
-        "imagen-4.0-1192.png": false,
-        "imagen-4.0-1193.png": false,
-        "imagen-4.0-1194.png": false,
-        "imagen-4.0-1195.png": false,
-        "imagen-4.0-1196.png": false,
-        "imagen-4.0-1197.png": false,
-        "imagen-4.0-1198.png": false,
-        "imagen-4.0-1199.png": false,
-        "imagen-4.0-1200.png": false,
-        "imagen-4.0-1201.png": false,
-        "imagen-4.0-1202.png": false,
-        "imagen-4.0-1203.png": false,
-        "imagen-4.0-1204.png": false,
-        "imagen-4.0-1205.png": false,
+        "imagen-4.0-1183.png": true,
+        "imagen-4.0-1184.png": true,
+        "imagen-4.0-1185.png": true,
+        "imagen-4.0-1186.png": true,
+        "imagen-4.0-1187.png": true,
+        "imagen-4.0-1188.png": true,
+        "imagen-4.0-1189.png": true,
+        "imagen-4.0-1190.png": true,
+        "imagen-4.0-1191.png": true,
+        "imagen-4.0-1192.png": true,
+        "imagen-4.0-1193.png": true,
+        "imagen-4.0-1194.png": true,
+        "imagen-4.0-1195.png": true,
+        "imagen-4.0-1196.png": true,
+        "imagen-4.0-1197.png": true,
+        "imagen-4.0-1198.png": true,
+        "imagen-4.0-1199.png": true,
+        "imagen-4.0-1200.png": true,
+        "imagen-4.0-1201.png": true,
+        "imagen-4.0-1202.png": true,
+        "imagen-4.0-1203.png": true,
+        "imagen-4.0-1204.png": true,
+        "imagen-4.0-1205.png": true,
         "imagen-4.0-1206.png": false,
         "imagen-4.0-1207.png": false,
         "imagen-4.0-1208.png": false,
