Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1216,29 +1216,29 @@
         "imagen-4.0-1203.png": true,
         "imagen-4.0-1204.png": true,
         "imagen-4.0-1205.png": true,
-        "imagen-4.0-1206.png": false,
-        "imagen-4.0-1207.png": false,
-        "imagen-4.0-1208.png": false,
-        "imagen-4.0-1209.png": false,
-        "imagen-4.0-1210.png": false,
-        "imagen-4.0-1211.png": false,
-        "imagen-4.0-1212.png": false,
-        "imagen-4.0-1213.png": false,
-        "imagen-4.0-1214.png": false,
-        "imagen-4.0-1215.png": false,
-        "imagen-4.0-1216.png": false,
-        "imagen-4.0-1217.png": false,
-        "imagen-4.0-1218.png": false,
-        "imagen-4.0-1219.png": false,
-        "imagen-4.0-1220.png": false,
-        "imagen-4.0-1221.png": false,
-        "imagen-4.0-1222.png": false,
-        "imagen-4.0-1223.png": false,
-        "imagen-4.0-1224.png": false,
-        "imagen-4.0-1225.png": false,
-        "imagen-4.0-1226.png": false,
-        "imagen-4.0-1227.png": false,
-        "imagen-4.0-1228.png": false,
+        "imagen-4.0-1206.png": true,
+        "imagen-4.0-1207.png": true,
+        "imagen-4.0-1208.png": true,
+        "imagen-4.0-1209.png": true,
+        "imagen-4.0-1210.png": true,
+        "imagen-4.0-1211.png": true,
+        "imagen-4.0-1212.png": true,
+        "imagen-4.0-1213.png": true,
+        "imagen-4.0-1214.png": true,
+        "imagen-4.0-1215.png": true,
+        "imagen-4.0-1216.png": true,
+        "imagen-4.0-1217.png": true,
+        "imagen-4.0-1218.png": true,
+        "imagen-4.0-1219.png": true,
+        "imagen-4.0-1220.png": true,
+        "imagen-4.0-1221.png": true,
+        "imagen-4.0-1222.png": true,
+        "imagen-4.0-1223.png": true,
+        "imagen-4.0-1224.png": true,
+        "imagen-4.0-1225.png": true,
+        "imagen-4.0-1226.png": true,
+        "imagen-4.0-1227.png": true,
+        "imagen-4.0-1228.png": true,
         "imagen-4.0-1229.png": false,
         "imagen-4.0-1230.png": false,
         "imagen-4.0-1231.png": false,
