Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1239,28 +1239,28 @@
         "imagen-4.0-1226.png": true,
         "imagen-4.0-1227.png": true,
         "imagen-4.0-1228.png": true,
-        "imagen-4.0-1229.png": false,
-        "imagen-4.0-1230.png": false,
-        "imagen-4.0-1231.png": false,
-        "imagen-4.0-1232.png": false,
-        "imagen-4.0-1233.png": false,
-        "imagen-4.0-1234.png": false,
-        "imagen-4.0-1235.png": false,
-        "imagen-4.0-1236.png": false,
-        "imagen-4.0-1237.png": false,
-        "imagen-4.0-1238.png": false,
-        "imagen-4.0-1239.png": false,
-        "imagen-4.0-1240.png": false,
-        "imagen-4.0-1241.png": false,
-        "imagen-4.0-1242.png": false,
-        "imagen-4.0-1243.png": false,
-        "imagen-4.0-1244.png": false,
-        "imagen-4.0-1245.png": false,
-        "imagen-4.0-1246.png": false,
-        "imagen-4.0-1247.png": false,
-        "imagen-4.0-1248.png": false,
-        "imagen-4.0-1249.png": false,
-        "imagen-4.0-1250.png": false,
+        "imagen-4.0-1229.png": true,
+        "imagen-4.0-1230.png": true,
+        "imagen-4.0-1231.png": true,
+        "imagen-4.0-1232.png": true,
+        "imagen-4.0-1233.png": true,
+        "imagen-4.0-1234.png": true,
+        "imagen-4.0-1235.png": true,
+        "imagen-4.0-1236.png": true,
+        "imagen-4.0-1237.png": true,
+        "imagen-4.0-1238.png": true,
+        "imagen-4.0-1239.png": true,
+        "imagen-4.0-1240.png": true,
+        "imagen-4.0-1241.png": true,
+        "imagen-4.0-1242.png": true,
+        "imagen-4.0-1243.png": true,
+        "imagen-4.0-1244.png": true,
+        "imagen-4.0-1245.png": true,
+        "imagen-4.0-1246.png": true,
+        "imagen-4.0-1247.png": true,
+        "imagen-4.0-1248.png": true,
+        "imagen-4.0-1249.png": true,
+        "imagen-4.0-1250.png": true,
         "imagen-4.0-1251.png": false,
         "imagen-4.0-1252.png": false,
         "imagen-4.0-1253.png": false,
