Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1261,58 +1261,58 @@
         "imagen-4.0-1248.png": true,
         "imagen-4.0-1249.png": true,
         "imagen-4.0-1250.png": true,
-        "imagen-4.0-1251.png": false,
-        "imagen-4.0-1252.png": false,
-        "imagen-4.0-1253.png": false,
-        "imagen-4.0-1254.png": false,
-        "imagen-4.0-1255.png": false,
-        "imagen-4.0-1256.png": false,
-        "imagen-4.0-1257.png": false,
-        "imagen-4.0-1258.png": false,
-        "imagen-4.0-1259.png": false,
-        "imagen-4.0-1260.png": false,
-        "imagen-4.0-1261.png": false,
-        "imagen-4.0-1262.png": false,
-        "imagen-4.0-1263.png": false,
-        "imagen-4.0-1264.png": false,
-        "imagen-4.0-1265.png": false,
-        "imagen-4.0-1266.png": false,
-        "imagen-4.0-1267.png": false,
-        "imagen-4.0-1268.png": false,
-        "imagen-4.0-1269.png": false,
-        "imagen-4.0-1270.png": false,
-        "imagen-4.0-1271.png": false,
-        "imagen-4.0-1272.png": false,
-        "imagen-4.0-1273.png": false,
-        "imagen-4.0-1274.png": false,
-        "imagen-4.0-1275.png": false,
-        "imagen-4.0-1276.png": false,
-        "imagen-4.0-1277.png": false,
-        "imagen-4.0-1278.png": false,
-        "imagen-4.0-1279.png": false,
-        "imagen-4.0-1280.png": false,
-        "imagen-4.0-1281.png": false,
-        "imagen-4.0-1282.png": false,
-        "imagen-4.0-1283.png": false,
-        "imagen-4.0-1284.png": false,
-        "imagen-4.0-1285.png": false,
-        "imagen-4.0-1286.png": false,
-        "imagen-4.0-1287.png": false,
-        "imagen-4.0-1288.png": false,
-        "imagen-4.0-1289.png": false,
-        "imagen-4.0-1290.png": false,
-        "imagen-4.0-1291.png": false,
-        "imagen-4.0-1292.png": false,
-        "imagen-4.0-1293.png": false,
-        "imagen-4.0-1294.png": false,
-        "imagen-4.0-1295.png": false,
-        "imagen-4.0-1296.png": false,
-        "imagen-4.0-1297.png": false,
-        "imagen-4.0-1298.png": false,
-        "imagen-4.0-1299.png": false,
-        "imagen-4.0-1300.png": false,
-        "imagen-4.0-1301.png": false,
-        "imagen-4.0-1302.png": false,
+        "imagen-4.0-1251.png": true,
+        "imagen-4.0-1252.png": true,
+        "imagen-4.0-1253.png": true,
+        "imagen-4.0-1254.png": true,
+        "imagen-4.0-1255.png": true,
+        "imagen-4.0-1256.png": true,
+        "imagen-4.0-1257.png": true,
+        "imagen-4.0-1258.png": true,
+        "imagen-4.0-1259.png": true,
+        "imagen-4.0-1260.png": true,
+        "imagen-4.0-1261.png": true,
+        "imagen-4.0-1262.png": true,
+        "imagen-4.0-1263.png": true,
+        "imagen-4.0-1264.png": true,
+        "imagen-4.0-1265.png": true,
+        "imagen-4.0-1266.png": true,
+        "imagen-4.0-1267.png": true,
+        "imagen-4.0-1268.png": true,
+        "imagen-4.0-1269.png": true,
+        "imagen-4.0-1270.png": true,
+        "imagen-4.0-1271.png": true,
+        "imagen-4.0-1272.png": true,
+        "imagen-4.0-1273.png": true,
+        "imagen-4.0-1274.png": true,
+        "imagen-4.0-1275.png": true,
+        "imagen-4.0-1276.png": true,
+        "imagen-4.0-1277.png": true,
+        "imagen-4.0-1278.png": true,
+        "imagen-4.0-1279.png": true,
+        "imagen-4.0-1280.png": true,
+        "imagen-4.0-1281.png": true,
+        "imagen-4.0-1282.png": true,
+        "imagen-4.0-1283.png": true,
+        "imagen-4.0-1284.png": true,
+        "imagen-4.0-1285.png": true,
+        "imagen-4.0-1286.png": true,
+        "imagen-4.0-1287.png": true,
+        "imagen-4.0-1288.png": true,
+        "imagen-4.0-1289.png": true,
+        "imagen-4.0-1290.png": true,
+        "imagen-4.0-1291.png": true,
+        "imagen-4.0-1292.png": true,
+        "imagen-4.0-1293.png": true,
+        "imagen-4.0-1294.png": true,
+        "imagen-4.0-1295.png": true,
+        "imagen-4.0-1296.png": true,
+        "imagen-4.0-1297.png": true,
+        "imagen-4.0-1298.png": true,
+        "imagen-4.0-1299.png": true,
+        "imagen-4.0-1300.png": true,
+        "imagen-4.0-1301.png": true,
+        "imagen-4.0-1302.png": true,
         "imagen-4.0-1303.png": false,
         "imagen-4.0-1304.png": false,
         "imagen-4.0-1305.png": false,
