Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1313,13 +1313,13 @@
         "imagen-4.0-1300.png": true,
         "imagen-4.0-1301.png": true,
         "imagen-4.0-1302.png": true,
-        "imagen-4.0-1303.png": false,
-        "imagen-4.0-1304.png": false,
-        "imagen-4.0-1305.png": false,
-        "imagen-4.0-1306.png": false,
-        "imagen-4.0-1307.png": false,
-        "imagen-4.0-1308.png": false,
-        "imagen-4.0-1309.png": false,
+        "imagen-4.0-1303.png": true,
+        "imagen-4.0-1304.png": true,
+        "imagen-4.0-1305.png": true,
+        "imagen-4.0-1306.png": true,
+        "imagen-4.0-1307.png": true,
+        "imagen-4.0-1308.png": true,
+        "imagen-4.0-1309.png": true,
         "imagen-4.0-1310.png": false,
         "imagen-4.0-1311.png": false,
         "imagen-4.0-1312.png": false,
