Update annotations by fernando

--- a/config.json
+++ b/config.json
@@ -1320,33 +1320,33 @@
         "imagen-4.0-1307.png": true,
         "imagen-4.0-1308.png": true,
         "imagen-4.0-1309.png": true,
-        "imagen-4.0-1310.png": false,
-        "imagen-4.0-1311.png": false,
-        "imagen-4.0-1312.png": false,
-        "imagen-4.0-1313.png": false,
-        "imagen-4.0-1314.png": false,
-        "imagen-4.0-1315.png": false,
-        "imagen-4.0-1316.png": false,
-        "imagen-4.0-1317.png": false,
-        "imagen-4.0-1318.png": false,
-        "imagen-4.0-1319.png": false,
-        "imagen-4.0-1320.png": false,
-        "imagen-4.0-1321.png": false,
-        "imagen-4.0-1322.png": false,
-        "imagen-4.0-1323.png": false,
-        "imagen-4.0-1324.png": false,
-        "imagen-4.0-1325.png": false,
-        "imagen-4.0-1326.png": false,
-        "imagen-4.0-1327.png": false,
-        "imagen-4.0-1328.png": false,
-        "imagen-4.0-1329.png": false,
-        "imagen-4.0-1330.png": false,
-        "imagen-4.0-1331.png": false,
-        "imagen-4.0-1332.png": false,
-        "imagen-4.0-1333.png": false,
-        "imagen-4.0-1334.png": false,
-        "imagen-4.0-1335.png": false,
-        "imagen-4.0-1336.png": false,
+        "imagen-4.0-1310.png": true,
+        "imagen-4.0-1311.png": true,
+        "imagen-4.0-1312.png": true,
+        "imagen-4.0-1313.png": true,
+        "imagen-4.0-1314.png": true,
+        "imagen-4.0-1315.png": true,
+        "imagen-4.0-1316.png": true,
+        "imagen-4.0-1317.png": true,
+        "imagen-4.0-1318.png": true,
+        "imagen-4.0-1319.png": true,
+        "imagen-4.0-1320.png": true,
+        "imagen-4.0-1321.png": true,
+        "imagen-4.0-1322.png": true,
+        "imagen-4.0-1323.png": true,
+        "imagen-4.0-1324.png": true,
+        "imagen-4.0-1325.png": true,
+        "imagen-4.0-1326.png": true,
+        "imagen-4.0-1327.png": true,
+        "imagen-4.0-1328.png": true,
+        "imagen-4.0-1329.png": true,
+        "imagen-4.0-1330.png": true,
+        "imagen-4.0-1331.png": true,
+        "imagen-4.0-1332.png": true,
+        "imagen-4.0-1333.png": true,
+        "imagen-4.0-1334.png": true,
+        "imagen-4.0-1335.png": true,
+        "imagen-4.0-1336.png": true,
         "imagen-4.0-1337.png": false,
         "imagen-4.0-1338.png": false,
         "imagen-4.0-1339.png": false,
